--- a/games/index.html
+++ b/games/index.html
@@ -68,9 +68,18 @@
 		<h2 class="project-title">Roboxing</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>Lorem ipsum dolor sit amet.</p>
+				<p>Arcade-style, 1v1 Robot boxing.<br><br>This project was made with my friend Tyler Eichten in collaboration with Husky Game Development at Michigan Tech University. It was originally developed for an arcade cabinet, but was later adapted to work with Xbox-style controllers. The game was written in Unity, integrated with FMOD Studio, and used Github for version control.</p>
 			</div>
-			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+			<div class="project-content-left">
+				<iframe style="border: 0; width: 100%; height: 120px; margin-top: 4em" src="https://bandcamp.com/EmbeddedPlayer/album=1743901494/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/roboxing">Roboxing by Logan Hardin</a></iframe>
+			</div>
+			<div class="project-content-right">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/l1bBcV8COYI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<p>The full soundtrack is available for free from Bandcamp, embedded here. The game is similarly available for free below.</p>
+				<a class="undecorated-links" target="_self" href="https://tyler-eichten.itch.io/roboxing">
+					<button class="header-button">Download at Itch.io</button>
+				</a>
+			</div>
 		</div>
 	</div>
 <!--Triseum & Live Lab projects-->
@@ -79,9 +88,14 @@
 		<h2 class="project-title">Triseum &#38; LIVE Lab</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>Lorem ipsum dolor sit amet.</p>
+				<p>Games for education and research.<br><br>In November 2016, I was contracted to do music composition work for Triseum LTD, a developer in Bryan, TX known for their Arté and Variant higher-level educational game series.<br><br>From January through August 2017, I was also involved with related projects with the LIVE Lab at Texas A&#38;M, an educational research lab focused on game development.</p>
 			</div>
 			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+			<div class="project-content-right">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<p>Due to a couple of NDA's, I can't discuss the exact nature of my involvement, but more information can be found about Triseum here, as well as more information on the LIVE Lab here.</p>
+			</div>
+			
 		</div>
 	</div>
 	
