--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	<div class="content-bio-div">
 		<div>
 			<h2>Howdy!</h2>
-			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN. <br><br> Lorem ipsum dolor sit amet.</p>
+			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN. <br><br> [Main bio info will go here...this <i>is</i>  a site in progress after all, and my old bio page is years out of date.] <br><br> I'm interested in projects that push the bounds of what a game can be, no matter the team size or the genre. If you're interested in me or my work, please don't hesitate to reach out!</p>
 		</div>
 		<div>
 			<img id="img-bio" src="images/Logo03.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
