--- a/other/index.html
+++ b/other/index.html
@@ -57,9 +57,63 @@
 		<h2 class="project-title">Reaper Scripts</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>Lorem ipsum dolor sit amet.</p>
+				<p>A repository of Reapack compliant Lua scripts used for Reaper. Mostly simple utilities.<br><br>If you're interested and have Reapack, go to Extensions > Reapack > Import Repositories... and paste the following:</p>
+				<a href="https://raw.githubusercontent.com/Snoopy20111/snoop-ReaScripts/main/index.xml">
+				<p>https://raw.githubusercontent.com/Snoopy20111/snoop-ReaScripts/main/index.xml</p>
+				</a>
 			</div>
-			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+			<div class="project-content-right">
+				<img id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+				<a class="undecorated-links" href="https://github.com/Snoopy20111/snoop-ReaScripts">
+					<button class="header-button">See the Github Repo</button>
+				</a>
+			</div>
+		</div>
+		<div class="project-div">
+			<div class="project-content-left">
+				<h3>Region Utility</h3>
+				<p>Making Regions less tedious.<br><br>Currently makes a region for every selected media item, named after and assigned to its track. Further plans include adding a GUI, more options for names and region matrix assignments, and also better naming/numbering.</p>
+			</div>
+			<div class="project-content-right">
+				<img style="width: 500px" src="../images/ReaScripts_Regions_Util.gif" alt="A gif depicting the Region Utility script in action. The names of two tracks are shown, followed by the user selecting two media items, and running the script, after which each item has a region created bounding each item named after the tracks." />
+			</div>
+		</div>
+		<div class="project-div">
+			<div class="project-content-left">
+				<img style="width: 500px" src="../images/ReaScripts_SnapToEndOfMediaItems.gif" alt="A gif depicting the Snap To End of Media Items script in action. Two media items, with ends before and after a grid line, are selected. When the script is run, the two items' ends snap to the same grid line." />
+			</div>
+			<div class="project-content-right">
+				<h3>Snap End of Media Items</h3>
+				<p>Snaps selected media items to the nearest grid-line.<br><br>Pairs well with scripts that don't cut media items on gridlines. Makes it much easier to edit, make regions over, etc.</p>
+			</div>
+		</div>
+		<div class="project-div">
+			<div class="project-content-left">
+				<h3>Region Prefix/Suffix</h3>
+				<p>For adjusting Region names en masse.<br><br>Largely edited from Acendan's region enumeration script, and similar to the ReaPack standards Find And Replace in Regions/Markers (also written by Acendan). Please go look at his scripts and other work, especially with the UCS.</p>
+			</div>
+			<div class="project-content-left">
+				<img style="width: 500px" src="../images/ReaScripts_RegionPrefixSuffix.gif" alt="A gif depicting the Region Utility script in action. The names of two tracks are shown, followed by the user selecting two media items, and running the script, after which each item has a region created bounding each item named after the tracks." />
+			</div>
+		</div>
+	</div>
+<!--Solar Science-->
+	<div id="Solar Science">
+	<hr class="main_hr">
+		<div class="project-div">
+			<div class="project-content-left">
+				<h2>Solar Science</h2>
+				<p>Kerbal Space Program Mod.<br>Praise the Sun!<br><br>This was a project I originally undertook during my senior year of high school as a directed study. I modeled, textured, animated, and scripted two new experiment parts, based upon those aboard NASA's real SOHO and STEREO missions. Over the years I made small additions, such as experiment requirements, custom sfx, and loading real-time images from NASA's feeds when the experiment is run. As KSP is made in Unity, I used it and C# extensively.</p>
+			</div>
+			<div class="project-content-right">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/3WlT3HZsg2U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
+			<div class="project-content-left">
+				<p>Over the 5 years I maintained and expanded the mod, Solar Science managed somewhere around almost 50k downloads across all platforms. In early 2020 I handed the project off to KSP Forums user zer0Kerbal, who has maintained the mod since.
+				<a class="undecorated-links" href="https://spacedock.info/mod/811/Solar%20Science">
+					<button class="header-button">Download the mod here!</button>
+				</a>
+			</div>
 		</div>
 	</div>
 <!--In Living Color (art)-->
@@ -73,7 +127,6 @@
 			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
 		</div>
 	</div>
-	<hr class="main_hr">
 </div>
 <!--Footer, similar links as header-->
 	<footer class="footer-main">
