--- a/games/index.html
+++ b/games/index.html
@@ -59,7 +59,9 @@
 			<div class="project-content-left">
 				<p>Lorem ipsum dolor sit amet.</p>
 			</div>
-			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+			<div class="project-content-right">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
 		</div>
 	</div>
 <!--Roboxing-->
