--- a/other/index.html
+++ b/other/index.html
@@ -57,13 +57,13 @@
 		<h2 class="project-title">Reaper Scripts</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>A repository of Reapack compliant Lua scripts used for Reaper. Mostly simple utilities.<br><br>If you're interested and have Reapack, go to Extensions > Reapack > Import Repositories... and paste the following:</p>
+				<p>A repository of Reapack compliant Lua scripts used for Reaper. Mostly simple utilities.<br>If you're interested and have Reapack, go to Extensions > Reapack > Import Repositories... and paste the following:</p>
 				<a href="https://raw.githubusercontent.com/Snoopy20111/snoop-ReaScripts/main/index.xml">
 				<p>https://raw.githubusercontent.com/Snoopy20111/snoop-ReaScripts/main/index.xml</p>
 				</a>
 			</div>
 			<div class="project-content-right">
-				<img id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+				<img src="../images/ReaScripts_onPage.jpg" alt="Temp" />
 				<a class="undecorated-links" href="https://github.com/Snoopy20111/snoop-ReaScripts">
 					<button class="header-button">See the Github Repo</button>
 				</a>
@@ -75,12 +75,12 @@
 				<p>Making Regions less tedious.<br><br>Currently makes a region for every selected media item, named after and assigned to its track. Further plans include adding a GUI, more options for names and region matrix assignments, and also better naming/numbering.</p>
 			</div>
 			<div class="project-content-right">
-				<img style="width: 500px" src="../images/ReaScripts_Regions_Util.gif" alt="A gif depicting the Region Utility script in action. The names of two tracks are shown, followed by the user selecting two media items, and running the script, after which each item has a region created bounding each item named after the tracks." />
+				<img class="img-reascript-gif" src="../images/ReaScripts_Regions_Util.gif" alt="A gif depicting the Region Utility script in action. The names of two tracks are shown, followed by the user selecting two media items, and running the script, after which each item has a region created bounding each item named after the tracks." />
 			</div>
 		</div>
 		<div class="project-div">
 			<div class="project-content-left">
-				<img style="width: 500px" src="../images/ReaScripts_SnapToEndOfMediaItems.gif" alt="A gif depicting the Snap To End of Media Items script in action. Two media items, with ends before and after a grid line, are selected. When the script is run, the two items' ends snap to the same grid line." />
+				<img class="img-reascript-gif" src="../images/ReaScripts_SnapToEndOfMediaItems.gif" alt="A gif depicting the Snap To End of Media Items script in action. Two media items, with ends before and after a grid line, are selected. When the script is run, the two items' ends snap to the same grid line." />
 			</div>
 			<div class="project-content-right">
 				<h3>Snap End of Media Items</h3>
@@ -93,7 +93,7 @@
 				<p>For adjusting Region names en masse.<br><br>Largely edited from Acendan's region enumeration script, and similar to the ReaPack standards Find And Replace in Regions/Markers (also written by Acendan). Please go look at his scripts and other work, especially with the UCS.</p>
 			</div>
 			<div class="project-content-left">
-				<img style="width: 500px" src="../images/ReaScripts_RegionPrefixSuffix.gif" alt="A gif depicting the Region Utility script in action. The names of two tracks are shown, followed by the user selecting two media items, and running the script, after which each item has a region created bounding each item named after the tracks." />
+				<img class="img-reascript-gif" src="../images/ReaScripts_RegionPrefixSuffix.gif" alt="A gif depicting the Region Utility script in action. The names of two tracks are shown, followed by the user selecting two media items, and running the script, after which each item has a region created bounding each item named after the tracks." />
 			</div>
 		</div>
 	</div>
