--- a/games/index.html
+++ b/games/index.html
@@ -34,16 +34,16 @@
 		</div>
 		<div class="header-sidekick-links">
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
+				<img id="img-twitter-header" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
-				<img id="img-linkedin" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
+				<img id="img-linkedin-header" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
+				<img id="img-bandcamp-header" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
+				<img id="img-tumblr-header" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
 			</a>
 		</div>
 	</div>
@@ -60,7 +60,7 @@
 				<p>Lorem ipsum dolor sit amet.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/em4gv1Ietko" title="Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
@@ -73,10 +73,10 @@
 				<p>Arcade-style, 1v1 Robot boxing.<br><br>This project was made with my friend Tyler Eichten in collaboration with Husky Game Development at Michigan Tech University. It was originally developed for an arcade cabinet, but was later adapted to work with Xbox-style controllers. The game was written in Unity, integrated with FMOD Studio, and used Github for version control.</p>
 			</div>
 			<div class="project-content-left">
-				<iframe style="border: 0; width: 100%; height: 120px; margin-top: 4em" src="https://bandcamp.com/EmbeddedPlayer/album=1743901494/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/roboxing">Roboxing by Logan Hardin</a></iframe>
+				<iframe style="border: 0; width: 100%; height: 120px; margin-top: 4em" src="https://bandcamp.com/EmbeddedPlayer/album=1743901494/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" title="Bandcamp player for Roboxing OST album"seamless><a href="https://snoopy20111.bandcamp.com/album/roboxing">Roboxing by Logan Hardin</a></iframe>
 			</div>
 			<div class="project-content-right">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/l1bBcV8COYI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/l1bBcV8COYI" title="Roboxing screen recording, demonstrating the sound and action of the game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>The full soundtrack is available for free from Bandcamp, embedded here. The game is similarly available for free below.</p>
 				<a class="undecorated-links" target="_self" href="https://tyler-eichten.itch.io/roboxing">
 					<button class="header-button">Download at Itch.io</button>
@@ -94,7 +94,7 @@
 			</div>
 			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
 			<div class="project-content-right">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Trailer for Variant: Limits, one of Triseum's successful titles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>Due to a couple of NDA's, I can't discuss the exact nature of my involvement, but more information can be found about Triseum here, as well as more information on the LIVE Lab here.</p>
 			</div>
 			
@@ -106,16 +106,16 @@
 	<footer class="footer-main">
 		<div class="footer-links">
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
+				<img id="img-twitter-footer" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
-				<img id="img-linkedin" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
+				<img id="img-linkedin-footer" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
+				<img id="img-bandcamp-footer" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
+				<img id="img-tumblr-footer" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
 			</a>
 		</div>
 		<!--<p><a href="mailto:loganhardin.sound@gmail.com">loganhardin.sound@gmail.com</a></p>-->
