Fixes to sticky buttons
Gave the sticky buttons a background and fixed their location on mobile and desktop.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	</div>
 <!--Header (sticks to the top)-->
 	<div class="header-sidekick">
+		<div class="header-sidekick-background">
 		<div class="header-sidekick-buttons">
 			<button class="header-button-disabled">Home</button>
 			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games">
@@ -43,8 +44,9 @@
 				<img id="img-bandcamp-header" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-header" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
+				<img id="img-tumblr-header" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, viewer and listener discretion is advised." />
 			</a>
+		</div>
 		</div>
 	</div>
 <!--Main content-->
