--- a/games/index.html
+++ b/games/index.html
@@ -20,6 +20,7 @@
 	</div>
 <!--Header (sticks to the top)-->
 	<div class="header-sidekick">
+		<div class="header-sidekick-background">
 		<div class="header-sidekick-buttons">
 			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/">
 				<button class="header-button">Home</button>
@@ -45,6 +46,7 @@
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
 				<img id="img-tumblr-header" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
 			</a>
+		</div>
 		</div>
 	</div>
 <!--Main content-->
