--- a/other/index.html
+++ b/other/index.html
@@ -20,6 +20,7 @@
 	</div>
 <!--Header (sticks to the top)-->
 	<div class="header-sidekick">
+		<div class="header-sidekick-background">
 		<div class="header-sidekick-buttons">
 			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/">
 				<button class="header-button">Home</button>
@@ -34,17 +35,18 @@
 		</div>
 		<div class="header-sidekick-links">
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
+				<img id="img-twitter-header" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
-				<img id="img-linkedin" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
+				<img id="img-linkedin-header" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
+				<img id="img-bandcamp-header" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
+				<img id="img-tumblr-header" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
 			</a>
+		</div>
 		</div>
 	</div>
 <!--Main content-->
