Quick Links fixes
Giving Quick Links some polish, outlines, space between the clickable links, etc.

--- a/index.html
+++ b/index.html
@@ -67,30 +67,38 @@
 	<div class="content-normal-div">
 		<h2>Quick Links</h2>
 		<div class="content-quick-link-div">
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
-			<div class="content-quick-link-box">
-				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
-				<p>Forza Motorsport</p>
+			<div class="content-quick-link-separator">
+				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
+				<div class="content-quick-link-box">
+					<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+					<p>Forza Motorsport</p>
+				</div>
+				</a>
 			</div>
-			</a>
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Roboxing">
-			<div class="content-quick-link-box">
-				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
-				<p>Roboxing</p>
+			<div class="content-quick-link-separator">
+				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Roboxing">
+				<div class="content-quick-link-box">
+					<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+					<p>Roboxing</p>
+				</div>
+				</a>
 			</div>
-			</a>
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#TriseumLiveLab">
-			<div class="content-quick-link-box">
-				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
-				<p>Triseum &#38; LIVE Lab</p>
+			<div class="content-quick-link-separator">
+				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#TriseumLiveLab">
+				<div class="content-quick-link-box">
+					<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+					<p>Triseum &#38; LIVE Lab</p>
+				</div>
+				</a>
 			</div>
-			</a>
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#ReaperScripts">
-			<div class="content-quick-link-box">
-				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
-				<p>Reaper Scripts</p>
+			<div class="content-quick-link-separator">
+				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#ReaperScripts">
+				<div class="content-quick-link-box">
+					<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+					<p>Reaper Scripts</p>
+				</div>
+				</a>
 			</div>
-			</a>
 		</div>
 	</div>
 	<hr class="main_hr">
