Mobile Formatting Cleanup
Cleanup of mobile vs desktop formatting, mostly around embedded videos and download buttons. Also fixed an issue where the Other page had a hanging paragraph that never closed in Solar Science.

--- a/games/index.html
+++ b/games/index.html
@@ -62,7 +62,7 @@
 				<p>Lorem ipsum dolor sit amet.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/em4gv1Ietko" title="Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
@@ -75,13 +75,13 @@
 				<p>Arcade-style, 1v1 Robot boxing.<br><br>This project was made with my friend Tyler Eichten in collaboration with Husky Game Development at Michigan Tech University. It was originally developed for an arcade cabinet, but was later adapted to work with Xbox-style controllers. The game was written in Unity, integrated with FMOD Studio, and used Github for version control.</p>
 			</div>
 			<div class="project-content-left">
-				<iframe style="border: 0; width: 100%; height: 120px; margin-top: 4em" src="https://bandcamp.com/EmbeddedPlayer/album=1743901494/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" title="Bandcamp player for Roboxing OST album"seamless><a href="https://snoopy20111.bandcamp.com/album/roboxing">Roboxing by Logan Hardin</a></iframe>
+				<iframe class="project-bandcamp-embed" id="roboxing-bandcamp" src="https://bandcamp.com/EmbeddedPlayer/album=1743901494/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" title="Bandcamp player for Roboxing OST album"seamless><a href="https://snoopy20111.bandcamp.com/album/roboxing">Roboxing by Logan Hardin</a></iframe>
 			</div>
 			<div class="project-content-right">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/l1bBcV8COYI" title="Roboxing screen recording, demonstrating the sound and action of the game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/l1bBcV8COYI" title="Roboxing screen recording, demonstrating the sound and action of the game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>The full soundtrack is available for free from Bandcamp, embedded here. The game is similarly available for free below.</p>
 				<a class="undecorated-links" target="_self" href="https://tyler-eichten.itch.io/roboxing">
-					<button class="header-button">Download at Itch.io</button>
+					<button class="download-button">Download at Itch.io</button>
 				</a>
 			</div>
 		</div>
@@ -96,10 +96,9 @@
 			</div>
 			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
 			<div class="project-content-right">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Trailer for Variant: Limits, one of Triseum's successful titles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Trailer for Variant: Limits, one of Triseum's successful titles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>Due to a couple of NDA's, I can't discuss the exact nature of my involvement, but more information can be found about Triseum here, as well as more information on the LIVE Lab here.</p>
 			</div>
-			
 		</div>
 	</div>
 	
