--- a/other/index.html
+++ b/other/index.html
@@ -67,7 +67,7 @@
 			<div class="project-content-right">
 				<img src="../images/ReaScripts_onPage.jpg" alt="Temp" />
 				<a class="undecorated-links" href="https://github.com/Snoopy20111/snoop-ReaScripts">
-					<button class="header-button">See the Github Repo</button>
+					<button class="download-button">See the Github Repo</button>
 				</a>
 			</div>
 		</div>
@@ -108,12 +108,12 @@
 				<p>Kerbal Space Program Mod.<br>Praise the Sun!<br><br>This was a project I originally undertook during my senior year of high school as a directed study. I modeled, textured, animated, and scripted two new experiment parts, based upon those aboard NASA's real SOHO and STEREO missions. Over the years I made small additions, such as experiment requirements, custom sfx, and loading real-time images from NASA's feeds when the experiment is run. As KSP is made in Unity, I used it and C# extensively.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/3WlT3HZsg2U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/3WlT3HZsg2U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-left">
-				<p>Over the 5 years I maintained and expanded the mod, Solar Science managed somewhere around almost 50k downloads across all platforms. In early 2020 I handed the project off to KSP Forums user zer0Kerbal, who has maintained the mod since.
+				<p>Over the 5 years I maintained and expanded the mod, Solar Science managed somewhere around almost 50k downloads across all platforms. In early 2020 I handed the project off to KSP Forums user zer0Kerbal, who has maintained the mod since.</p>
 				<a class="undecorated-links" href="https://spacedock.info/mod/811/Solar%20Science">
-					<button class="header-button">Download the mod here!</button>
+					<button class="download-button">Download the mod</button>
 				</a>
 			</div>
 		</div>
