Removing extra images
Deleting extra variations of images (favicon, logo, etc) and renaming the one being used to a shorter, more generic title.

--- a/games/index.html
+++ b/games/index.html
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Logan Hardin portfolio- Games</title>
 <link rel="stylesheet" href="../mystyle.css">
-<link rel="icon" type="image/x-icon" href="../images/favicon-32.png">
+<link rel="icon" type="image/x-icon" href="../images/favicon.png">
 </head>
 
 <body>
 <div class="content">
 <!--Header (stationary)-->
 	<div class="header-hero">
-		<img id="img-home" src="../images/Logo03.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		<img id="img-home" src="../images/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
 		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-hr">
@@ -94,7 +94,8 @@
 			<div class="project-content-left">
 				<p>Games for education and research.<br><br>In November 2016, I was contracted to do music composition work for Triseum LTD, a developer in Bryan, TX known for their Arté and Variant higher-level educational game series.<br><br>From January through August 2017, I was also involved with related projects with the LIVE Lab at Texas A&#38;M, an educational research lab focused on game development.</p>
 			</div>
-			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+			<img class="project-content-right" id="img-quicklink-prev" src="../images/
+			.svg" alt="Temp" />
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Trailer for Variant: Limits, one of Triseum's successful titles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>Due to a couple of NDA's, I can't discuss the exact nature of my involvement, but more information can be found about Triseum here, as well as more information on the LIVE Lab here.</p>
