--- a/other/index.html
+++ b/other/index.html
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Logan Hardin portfolio- Other</title>
 <link rel="stylesheet" href="../mystyle.css">
-<link rel="icon" type="image/x-icon" href="../images/favicon-32.png">
+<link rel="icon" type="image/x-icon" href="../images/favicon.png">
 </head>
 
 <body>
 <div class="content">
 <!--Header (stationary)-->
 	<div class="header-hero">
-		<img id="img-home" src="../images/Logo03.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		<img id="img-home" src="../images/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
 		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-hr">
@@ -126,7 +126,7 @@
 			<div class="project-content-left">
 				<p>Lorem ipsum dolor sit amet.</p>
 			</div>
-			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo.svg" alt="Temp" />
 		</div>
 	</div>
 </div>
