--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Logan Hardin portfolio- Home</title>
 <link rel="stylesheet" href="mystyle.css">
-<link rel="icon" type="image/x-icon" href="/images/favicon-32.png">
+<link rel="icon" type="image/x-icon" href="/images/favicon.png">
 </head>
 
 <body>
 <div class="content">
 <!--Header (stationary)-->
 	<div class="header-hero">
-		<img id="img-home" src="images/Logo03.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		<img id="img-home" src="images/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
 		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-hr">
@@ -70,7 +70,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+					<img id="img-quicklink-prev" src="images/Logo.svg" alt="Temp" />
 					<p>Forza Motorsport</p>
 				</div>
 				</a>
@@ -78,7 +78,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Roboxing">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+					<img id="img-quicklink-prev" src="images/Logo.svg" alt="Temp" />
 					<p>Roboxing</p>
 				</div>
 				</a>
@@ -86,7 +86,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#TriseumLiveLab">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+					<img id="img-quicklink-prev" src="images/Logo.svg" alt="Temp" />
 					<p>Triseum &#38; LIVE Lab</p>
 				</div>
 				</a>
@@ -94,7 +94,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#ReaperScripts">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+					<img id="img-quicklink-prev" src="images/Logo.svg" alt="Temp" />
 					<p>Reaper Scripts</p>
 				</div>
 				</a>
@@ -109,7 +109,7 @@
 			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN. <br><br> [Main bio info will go here...this <i>is</i>  a site in progress after all, and my old bio page is years out of date.] <br><br> I'm interested in projects that push the bounds of what a game can be, no matter the team size or the genre. If you're interested in me or my work, please don't hesitate to reach out!</p>
 		</div>
 		<div>
-			<img id="img-bio" src="images/Logo03.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+			<img id="img-bio" src="images/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
 		</div>
 	</div>
 	<div id="container-disclaimer-text">
