--- a/index.html
+++ b/index.html
@@ -70,32 +70,32 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Logo.svg" alt="Temp" />
-					<p>Forza Motorsport</p>
+					<img id="img-quicklink-prev" src="images/Forza-Preview-02.jpg" alt="Temp" />
+					<h4>Forza Motorsport</h4>
 				</div>
 				</a>
 			</div>
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Roboxing">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Logo.svg" alt="Temp" />
-					<p>Roboxing</p>
+					<img id="img-quicklink-prev" src="images/Roboxing-Preview.jpg" alt="Temp" />
+					<h4>Roboxing</h4>
 				</div>
 				</a>
 			</div>
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#TriseumLiveLab">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Logo.svg" alt="Temp" />
-					<p>Triseum &#38; LIVE Lab</p>
+					<img id="img-quicklink-prev" src="images/Triseum-Preview-02.jpg" alt="Temp" />
+					<h4>Triseum &#38; LIVE Lab</h4>
 				</div>
 				</a>
 			</div>
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#ReaperScripts">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Logo.svg" alt="Temp" />
-					<p>Reaper Scripts</p>
+					<img id="img-quicklink-prev" src="images/Reaper-Preview-01.jpg" alt="Temp" />
+					<h4>Reaper Scripts</h4>
 				</div>
 				</a>
 			</div>
