Added Image Content
Filled in a lot of placeholder images, and messed with margins, borders, etc.

--- a/games/index.html
+++ b/games/index.html
@@ -51,8 +51,6 @@
 	</div>
 <!--Main content-->
 <div class="content-main">
-<!--Page Title-->
-	<h2 style="text-align: center">Games</h2>
 <!--Forza!-->
 	<div id="Forza">
 	<hr class="main_hr">
@@ -92,13 +90,12 @@
 		<h2 class="project-title">Triseum &#38; LIVE Lab</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>Games for education and research.<br><br>In November 2016, I was contracted to do music composition work for Triseum LTD, a developer in Bryan, TX known for their Arté and Variant higher-level educational game series.<br><br>From January through August 2017, I was also involved with related projects with the LIVE Lab at Texas A&#38;M, an educational research lab focused on game development.</p>
+				<p>Games for education and research.<br><br>In November 2016, I was contracted to do music composition work for Triseum LTD, a developer in Bryan, TX known for their Arté and Variant higher-level educational game series. From January through August 2017, I was also involved with related projects with the LIVE Lab at Texas A&#38;M, an educational research lab focused on game development.</p>
 			</div>
-			<img class="project-content-right" id="img-quicklink-prev" src="../images/
-			.svg" alt="Temp" />
+			<img class="project-content-right" id="img-arte-lumiere" src="../images/ARTe-Lumiere.jpg" alt="Screenshot from Arte Lumiere, another Triseum title" />
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Trailer for Variant: Limits, one of Triseum's successful titles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>Due to a couple of NDA's, I can't discuss the exact nature of my involvement, but more information can be found about Triseum here, as well as more information on the LIVE Lab here.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque. Risus at ultrices mi tempus imperdiet nulla malesuada. Diam maecenas ultricies mi eget mauris. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Pretium viverra suspendisse potenti nullam. Magna fermentum iaculis eu non diam phasellus.</p>
 			</div>
 		</div>
 	</div>
