--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Forza-Preview-02.jpg" alt="Temp" />
+					<img id="img-quicklink-prev" src="images/Forza-Preview.jpg" alt="Temp" />
 					<h4>Forza Motorsport</h4>
 				</div>
 				</a>
@@ -86,7 +86,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#TriseumLiveLab">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Triseum-Preview-02.jpg" alt="Temp" />
+					<img id="img-quicklink-prev" src="images/Triseum-Preview.jpg" alt="Temp" />
 					<h4>Triseum &#38; LIVE Lab</h4>
 				</div>
 				</a>
@@ -94,7 +94,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#ReaperScripts">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Reaper-Preview-01.jpg" alt="Temp" />
+					<img id="img-quicklink-prev" src="images/Reaper-Preview.jpg" alt="Temp" />
 					<h4>Reaper Scripts</h4>
 				</div>
 				</a>
@@ -109,17 +109,8 @@
 			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN. <br><br> [Main bio info will go here...this <i>is</i>  a site in progress after all, and my old bio page is years out of date.] <br><br> I'm interested in projects that push the bounds of what a game can be, no matter the team size or the genre. If you're interested in me or my work, please don't hesitate to reach out!</p>
 		</div>
 		<div>
-			<img id="img-bio" src="images/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+			<img id="img-bio" src="images/Me.jpg" alt="A photo of me!" />
 		</div>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
 	</div>
 </div>
 <!--Footer, similar links as header-->
